@@ -7,6 +7,16 @@
   % --- 1.0-0  once we fix  adjOutlyingness() properly !
   %     =====
 
+\section{CHANGES in robustbase VERSION 0.99-5 (2024-11-01, svn 1007)}{
+  \subsection{Misc}{
+    \itemize{
+      \item small changes in \file{tests/*}, "robustifying" against the
+      possibility of \code{osVersion} being \code{NULL};
+      with thank to Michael Chirico for alerting me.
+    }
+  }
+}
+
 \section{CHANGES in robustbase VERSION 0.99-4-1 (2024-09-25, svn 1006)}{
   \subsection{Misc}{
     \itemize{
